// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SearchInputComponent /> should appear a clearSearch button when the input value is not empty, and should handle clearSearch() on click 1`] = `
preact-render-spy (1 nodes)
-------
<div class="as-searchInput ">
  <input
    type="text"
    class="as-searchInput__input "
    placeholder=""
    autoFocus={false}
    onInput={[Function anonymous]}
    value="Some query text..."
   />
  <div
    class="as-searchInput__clearSearch "
    onClick={[Function anonymous]}
  >
    <div>x</div>
  </div>
</div>

`;

exports[`<SearchInputComponent /> should render new html properties when "htmlNodeInheritProps" are passed 1`] = `
preact-render-spy (1 nodes)
-------
<input
  type="text"
  class="some-class-name"
  placeholder=""
  autoFocus={false}
  data-apisearch="apisearch-search-bar"
  id="some-id"
  autocomplete="off"
  spellcheck={0}
  onInput={[Function anonymous]}
  value=""
 />

`;

exports[`<SearchInputComponent /> should render only the input when "withContainer" property is set to false 1`] = `
preact-render-spy (1 nodes)
-------
<input
  type="text"
  class="as-searchInput__input "
  placeholder=""
  autoFocus={false}
  onInput={[Function anonymous]}
  value=""
 />

`;

exports[`<SearchInputComponent /> should render with custom props 1`] = `
preact-render-spy (1 nodes)
-------
<div class="as-searchInput custom-container-class">
  <input
    type="text"
    class="as-searchInput__input undefined"
    placeholder="Type something..."
    autoFocus={false}
    onInput={[Function anonymous]}
    value=""
   />
</div>

`;

exports[`<SearchInputComponent /> should render with default props 1`] = `
preact-render-spy (1 nodes)
-------
<div class="as-searchInput ">
  <input
    type="text"
    class="as-searchInput__input "
    placeholder=""
    autoFocus={false}
    onInput={[Function anonymous]}
    value=""
   />
</div>

`;
